@@ -1,3 +1,9 @@
+2002-02-01  Seth Nickell  <snickell@stanford.edu>
+
+	* behavior-capplet.png:
+
+	Change to Jimmac's alternate behavior icon.
+
 Mon Jan 28 22:18:34 2002  Jonathan Blandford  <jrb@gnome.org>
 
 	* gnome-ui-properties.c (create_dialog): install globally
